--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,7 +42,7 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 268px;
     height: 471px;
 }
 
@@ -58,6 +58,7 @@ section#redes-sociais img {
 }
 
 section#redes-sociais img:hover {
+    border-radius: 50%;
     border: 3px solid rgba(142, 142, 142, 0.374);
     transition: transform .5s;
 }
